--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,4 @@
-
+oo
 
 header {
     height: 100vh;
@@ -26,7 +26,7 @@ header {
     border-radius: 50%;
     box-shadow: #4ef5f5 3px 1px 3px 1px;
     overflow: hidden;
-    background:url(../../assets/anku3.jpg);
+    background:url(../../assets/Snapchat-677517307.jpg);
     background-size: cover;
     background-position: center;
     background-position-y: -35px;
